--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "expo": "^49.0.13",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
+    "react-datepicker": "^4.20.0",
     "react-native": "0.72.5",
+    "react-native-date-picker": "^4.3.3",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-datepicker-dialog": "^0.0.9",
+    "react-native-svg": "^13.14.0",
+    "save": "^2.9.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   },
   "private": true
 }
