--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,5 @@ expo.webp.animated=false
 
 # Enable network inspector
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
+
+org.gradle.java.home=C:\\Program Files\\AdoptOpenJDK\\jre-11.0.7.10-hotspot
