--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -174,7 +174,15 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    implementation 'com.henninghall.date_picker:android:2.2.2'
 }
 
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
 applyNativeModulesAppBuildGradle(project)
+
+android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+}
