--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "expo": "^49.0.13",
+    "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -21,10 +22,10 @@
     "react-native-date-picker": "^4.3.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-datepicker-dialog": "^0.0.9",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "^13.9.0",
+    "react-native-unimodules": "^0.14.10",
     "save": "^2.9.0",
-    "yup": "^1.3.2",
-    "expo-splash-screen": "~0.20.5"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
