--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-date-picker": "^4.3.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-datepicker-dialog": "^0.0.9",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-svg": "^13.9.0",
     "react-native-unimodules": "^0.14.10",
     "save": "^2.9.0",
