--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-svg": "^13.9.0",
     "react-native-unimodules": "^0.14.10",
+    "react-native-vector-icons": "^10.0.0",
     "save": "^2.9.0",
     "yup": "^1.3.2"
   },
