--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "axios": "^1.6.0",
     "expo": "^49.0.13",
+    "expo-auth-session": "~5.0.2",
+    "expo-facebook": "^12.2.0",
+    "expo-google-sign-in": "^11.0.0",
     "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
