--- a/src/static/json/appConfig.json
+++ b/src/static/json/appConfig.json
@@ -135,51 +135,51 @@
         "Zodiacs": [
             {
                 "name": "Aries",
-                "image": "aries1.png"
+                "image": "Aries.png"
             },
             {
                 "name": "Taurus",
-                "image": "taurus1.png"
+                "image": "Taurus.png"
             },
             {
                 "name": "Gemini",
-                "image": "gemini1.png"
+                "image": "Gemini.png"
             },
             {
                 "name": "Cancer",
-                "image": "cancer1.png"
+                "image": "Cancer.png"
             },
             {
                 "name": "Leo",
-                "image": "leo1.png"
+                "image": "Leo.png"
             },
             {
                 "name": "Virgo",
-                "image": "virgo1.png"
+                "image": "Virgo.png"
             },
             {
                 "name": "Libra",
-                "image": "libra1.png"
+                "image": "Libra.png"
             },
             {
                 "name": "Scorpio",
-                "image": "scorpio1.png"
+                "image": "Scorpio.png"
             },
             {
                 "name": "Sagittarius",
-                "image": "sagittarius1.png"
+                "image": "Sagittarius.png"
             },
             {
                 "name": "Capricorn",
-                "image": "capricorn1.png"
+                "image": "Capricorn.png"
             },
             {
                 "name": "Aquarius",
-                "image": "aquarius1.png"
+                "image": "Aquarius.png"
             },
             {
                 "name": "Pisces",
-                "image": "pisces1.png"
+                "image": "Pisces.png"
             }
         ],
         "profileMetadataArray": [
@@ -494,51 +494,51 @@
         "Zodiacs": [
             {
                 "name": "Овен",
-                "image": "aries1.png"
+                "image": "Aries.png"
             },
             {
                 "name": "Телец",
-                "image": "taurus1.png"
+                "image": "Taurus.png"
             },
             {
                 "name": "Близнецы",
-                "image": "gemini1.png"
+                "image": "Gemini.png"
             },
             {
                 "name": "Рак",
-                "image": "cancer1.png"
+                "image": "Cancer.png"
             },
             {
                 "name": "Лев",
-                "image": "leo1.png"
+                "image": "Leo.png"
             },
             {
                 "name": "Дева",
-                "image": "virgo1.png"
+                "image": "Virgo.png"
             },
             {
                 "name": "Весы",
-                "image": "libra1.png"
+                "image": "Libra.png"
             },
             {
                 "name": "Скорпион",
-                "image": "scorpio1.png"
+                "image": "Scorpio.png"
             },
             {
                 "name": "Стрелец",
-                "image": "sagittarius1.png"
+                "image": "Sagittarius.png"
             },
             {
                 "name": "Козерог",
-                "image": "capricorn1.png"
+                "image": "Capricorn.png"
             },
             {
                 "name": "Водолей",
-                "image": "aquarius1.png"
+                "image": "Aquarius.png"
             },
             {
                 "name": "Рыбы",
-                "image": "pisces1.png"
+                "image": "Pisces.png"
             }
         ],
         "profileMetadataArray": [
@@ -859,51 +859,51 @@
         "Zodiacs": [
             {
                 "name": "Овен",
-                "image": "aries1.png"
+                "image": "Aries.png"
             },
             {
                 "name": "Телець",
-                "image": "taurus1.png"
+                "image": "Taurus.png"
             },
             {
                 "name": "Близнюки",
-                "image": "gemini1.png"
+                "image": "Gemini.png"
             },
             {
                 "name": "Рак",
-                "image": "cancer1.png"
+                "image": "Cancer.png"
             },
             {
                 "name": "Лев",
-                "image": "leo1.png"
+                "image": "Leo.png"
             },
             {
                 "name": "Діва",
-                "image": "virgo1.png"
+                "image": "Virgo.png"
             },
             {
                 "name": "Терези",
-                "image": "libra1.png"
+                "image": "Libra.png"
             },
             {
                 "name": "Скорпіон",
-                "image": "scorpio1.png"
+                "image": "Scorpio.png"
             },
             {
                 "name": "Стрілець",
-                "image": "sagittarius1.png"
+                "image": "Sagittarius.png"
             },
             {
                 "name": "Козоріг",
-                "image": "capricorn1.png"
+                "image": "Capricorn.png"
             },
             {
                 "name": "Водолій",
-                "image": "aquarius1.png"
+                "image": "Aquarius.png"
             },
             {
                 "name": "Риби",
-                "image": "pisces1.png"
+                "image": "Pisces.png"
             }
         ],
         "profileMetadataArray": [
