--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.2.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.8",
@@ -20,6 +21,7 @@
     "expo-facebook": "^12.2.0",
     "expo-google-sign-in": "^11.0.0",
     "expo-splash-screen": "^0.10.3",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
@@ -29,7 +31,6 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-datepicker-dialog": "^0.0.9",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.9.0",
     "react-native-unimodules": "^0.14.10",
     "react-native-vector-icons": "^10.0.0",
