--- a/src/static/json/appConfig.json
+++ b/src/static/json/appConfig.json
@@ -604,7 +604,7 @@
         ],
         "signUpMetadataArray": [
             {
-                "name": "userName",
+                "name": "name",
                 "label": "Имя пользователя",
                 "component": "CustomInput",
                 "screenOffset": 136,
