--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.6.0",
-    "expo": "^49.0.13",
+    "expo": "^49.0.21",
     "expo-auth-session": "~5.0.2",
-    "expo-facebook": "^12.2.0",
-    "expo-google-sign-in": "^11.0.0",
+    "expo-facebook": "^9.1.0",
+    "expo-google-app-auth": "^8.1.4",
+    "expo-google-sign-in": "^10.1.1",
+    "expo-localization": "~14.3.0",
+    "expo-location": "~16.1.0",
     "expo-splash-screen": "^0.10.3",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
@@ -31,6 +34,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-datepicker-dialog": "^0.0.9",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-localize": "^3.0.4",
     "react-native-svg": "^13.9.0",
     "react-native-unimodules": "^0.14.10",
     "react-native-vector-icons": "^10.0.0",
