--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,16 @@
+plugins {
+  // Add the Google services Gradle plugin
+  id 'com.google.gms.google-services'
+}
+
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 
+
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
+
+
+
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -88,6 +97,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
+        compileSdkVersion 33
 
         buildConfigField("boolean", "REACT_NATIVE_UNSTABLE_USE_RUNTIME_SCHEDULER_ALWAYS", (findProperty("reactNative.unstable_useRuntimeSchedulerAlways") ?: true).toString())
     }
@@ -175,6 +185,24 @@ dependencies {
         implementation jscFlavor
     }
     implementation 'com.henninghall.date_picker:android:2.2.2'
+
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics'
+
+      // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-auth")
+
+    // Also add the dependency for the Google Play services library and specify its version
+    implementation("com.google.android.gms:play-services-auth:20.7.0")
+
+  // Add the dependencies for any other desired Firebase products
+  // https://firebase.google.com/docs/android/setup#available-libraries
+
 }
 
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
@@ -186,3 +214,4 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
 }
+
