--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,7 +10,11 @@ buildscript {
         frescoVersion = findProperty('expo.frescoVersion') ?: '2.5.0'
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
+        // compileSdkVersion = 33
+        // targetSdkVersion = 33
         ndkVersion = "23.1.7779620"
+
+        javaVersion = 11 // Указываем версию Java
     }
     repositories {
         google()
@@ -19,27 +23,25 @@ buildscript {
     dependencies {
         classpath('com.android.tools.build:gradle:7.0.2')
         classpath('com.facebook.react:react-native-gradle-plugin:0.72.5')
+        classpath ('com.google.gms:google-services:4.4.0') // Убедитесь, что эта зависимость добавлена
     }
-    ext {
-    compileSdkVersion = 30
-    targetSdkVersion = 30
-    javaVersion = 11 // Указываем версию Java
-}
 }
 
 allprojects {
     repositories {
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url(new File(['node', '--print', "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), '../android'))
-        }
-        maven {
-            // Android JSC is installed from npm
-            url(new File(['node', '--print', "require.resolve('jsc-android/package.json')"].execute(null, rootDir).text.trim(), '../dist'))
-        }
-
         google()
         mavenCentral()
         maven { url 'https://www.jitpack.io' }
+
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url("$rootDir/../node_modules/react-native/android")
+        }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
     }
 }
+
+
