--- a/package.json
+++ b/package.json
@@ -9,23 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~7.2.2",
     "@invertase/react-native-apple-authentication": "^2.2.2",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-picker/picker": "^2.5.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.6.0",
-    "expo": "^49.0.21",
+    "expo": "^49.0.0",
+    "expo-app-auth": "~11.1.0",
     "expo-auth-session": "~5.0.2",
     "expo-facebook": "^9.1.0",
-    "expo-google-app-auth": "^8.1.4",
+    "expo-firebase-auth": "^2.0.0",
+    "expo-firebase-core": "^3.1.0",
+    "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "^10.1.1",
-    "expo-localization": "~14.3.0",
     "expo-location": "~16.1.0",
-    "expo-splash-screen": "^0.10.3",
+    "expo-splash-screen": "~0.20.5",
     "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-datepicker": "^4.20.0",
@@ -35,11 +39,12 @@
     "react-native-datepicker-dialog": "^0.0.9",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-localize": "^3.0.4",
-    "react-native-svg": "^13.9.0",
-    "react-native-unimodules": "^0.14.10",
+    "react-native-svg": "13.9.0",
+    "react-native-unimodules": "^0.13.1",
     "react-native-vector-icons": "^10.0.0",
     "save": "^2.9.0",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "expo-random": "~13.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
